# WasmEdge

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
include/runtime/instance/component/: function.h
